# GitHubUploader

./: CMakeLists.txt  projectStructure.txt  setup.sh
bash_scripts/: install_dependencies.sh
data/: exclude_patterns.json
include/: GitHubUploader.hpp
src/: GitHubUploader.cpp  main.cpp
